[#20] Feat: 이미지 개수에 따라 edit 버튼 활성화 여부 결정하도록 delegate 함수 작성

--- a/PhotoAlbum/PhotoAlbum/Base.lproj/Main.storyboard
+++ b/PhotoAlbum/PhotoAlbum/Base.lproj/Main.storyboard
@@ -53,7 +53,11 @@
                                 <action selector="addButtonTouched:" destination="BYZ-38-t0r" id="iu6-dc-CaN"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" systemItem="edit" id="TiX-tT-edL"/>
+                        <barButtonItem key="rightBarButtonItem" enabled="NO" systemItem="edit" id="TiX-tT-edL">
+                            <connections>
+                                <action selector="editButtonTouched:" destination="BYZ-38-t0r" id="s3Y-N4-oIb"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="addButton" destination="ChL-FC-GbY" id="kvW-s1-wVv"/>
